# Opryxx_Apex

./: .dockerignore  .env  .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .windsurfrules  50  60  AI_OPTIMIZATION_ENGINE.py  AI_WORKBENCH.py  AI_Workbench.spec  ARCHITECTURE.md  ARCHITECTURE_FIX.py  AUTOMATED_REINSTALL.bat  BENCHMARK_SYSTEM.bat  BEST_PRACTICES_REPORT.md  BITLOCKER_RECOVERY.py  BUILD_EVERYTHING.bat  BUILD_ULTIMATE.py  CODE_ANALYSIS_REPORT.json  CODE_CRAWLER.py  CONTRIBUTING.md  CREATE_INSTALLER.py  CREATE_RECOVERY_USB.bat  DELL_INSPIRON_RECOVERY.py  DEPLOYMENT.md  Dockerfile  EMERGENCY_BOOT_RECOVERY.bat  EMERGENCY_RESCUE.bat  ENHANCED_PERFORMANCE_AI.py  ENHANCED_PIPELINES.py  ENHANCED_ULTIMATE_AI.py  ENHANCEMENT_ROADMAP.md  FINAL_INTEGRATION_REPORT.md  FINAL_SYSTEM_CHECK.py  FULL_STACK_STATUS.py  FULL_STACK_VERIFICATION.py  HIGH_LEVEL_DEPLOY.md  (+249 more)
.codesandbox/: tasks.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.windsurf/: global_startup.py  settings.json
LegalEdge-AI-Project/: README.md  requirements.txt
Modules/: disk_cleanup.bat  file_sorter_rename.bat  net_repair.bat  net_reset.bat  sys_scan.bat  syscheck.bat
OPRYXX_READY/: INSTALL_OPRYXX.bat  README.txt  START_OPRYXX.bat  master_start.py  requirements.txt
ai/: AI_WORKBENCH.py  ASCEND_AI.py  Interactive-1.ipynb  ULTIMATE_AI_OPTIMIZER.py  comprehensive_system_scanner.py  crash_analysis_engine.py  optimization_engine.py  test_comprehensive_system_scanner.py
ai-workbench/: .env  README.md  launch-memory-test.js  launch-nexus.js  launch-performance-test.js  minimal-http.js  network-test.js  nexus-core-bridge.js  package-lock.json  package.json  robust-server.js  simple-server.js  test-nexus-bridge.js  test-node.js  test-server-minimal.js  test-server.js
ai_workbench/: README.md  __main__.py  config.py  requirements.txt
api/: bridge-config.json  endpoints.json  health_endpoints.py  main.py  openapi_spec.py  validation.py
app/: main.py
architecture/: config.py  db.py
backend/: main.py  requirements.txt
benchmarks/: performance_benchmark.py
build_tools/: create_exe.py  create_installer.py
cli/: gemini-cli-integration.py  qwen-cli-integration.py
config/: performance.py  requirements.txt  security.py
core/: __init__.py  base.py  caching.py  config.py  db_utils.py  enhanced_gpu_ops.py  enhanced_logging.py  error_handler.py  exceptions.py  gpu_acceleration.py  gpu_detector.py  logger.py  logging.py  logging_config.py  main.py  memory_optimizer.py  monitoring.py  performance.py  performance_monitor.py  performance_tracker.py  resilience_system.py  samsung_ssd_recovery.py  storage_health.py  task_tracker.py
data/: opryxx.db  opryxx.db.bak_20250626_184823  opryxx.db.bak_20250626_185402  threat_database.json
docs/: API_DOCUMENTATION.md  CI_CD_SETUP.md  MEGA_README.md  RECOVERY_QUICKSTART.md  RECOVERY_SYSTEM_README.md  SECURE_CONFIG_INTEGRATION.md  USER_GUIDE.md  Ultimate_System_Optimization_Prompt.md  configuration.md  next-prisma-devstack.md  performance_guide.md
enhancements/: dashboard.py  gaming_mode.py  gpu_acceleration.py  memory_optimizer.py  notifications.py  system_validator.py  voice_commands.py
gui/: MEGA_OPRYXX.py  __init__.py  ai_optimization_panel.py  ai_recommendations_panel.py  health_dashboard.py  modern_interface.py  performance_history_panel.py  predictive_analytics_panel.py  recovery_gui_integration.py  requirements.txt  status_dashboard.py  task_monitor.py  unified_gui.py  web_interface.py
integration/: combined_interface.py  todo_recovery_bridge.py
k8s/: deployment.yaml  hpa.yaml
launchers/: EMERGENCY_RECOVERY.bat  INSTALL_DEPENDENCIES.bat  LAUNCH_MEGA.bat  POWER_UP.bat
legacy/: OPRYXX_GUI_Enhanced.py  opryxx_optimizer_tab.py
lib/: Opryxx.AI.psm1  Opryxx.Executor.psm1  Opryxx.Logging.psm1  Opryxx.Manifest.psm1  Opryxx.Repair.psm1  Opryxx.Resume.psm1  Opryxx.Security.psm1
maintenance/: update_manager.py
migrations/: env.py
models/: __init__.py  base.py  todo.py
observability/: tracing.py
opryxx_logs2/: README.md  main_gui.py
powershell/: OPRYXX-Operator.psm1  OPRYXX-OperatorHub.psm1
prometheus/: alert.rules  prometheus.yml
promtail/: config.yml
recovery/: NUCLEAR_RESET.bat  README.md  __init__.py  auto_reinstall_helper.py  automated_os_reinstall.py  bitlocker_rescue.py  boot_menu_integration.py  clean_install_guide.py  create_e_drive_recovery.py  create_recovery_media.ps1  driver_manager.py  hardware_rescue.py  hirens_opryxx_integration.py  master_recovery.py  samsung_4tb_recovery.py  windows11_bypass.py  winre_config.ps1
resilience/: circuit_breaker.py
scripts/: __init__.py  activate_gpu.py  check_performance_regression.py  credential_manager.py  (+4 more)
(+284 files in other folders)
