[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opryxx"
version = "0.1.0"
description = "OPRYXX AI Workbench - Comprehensive AI Optimization and Automation Platform"
readme = "README.md"
authors = [
    {name = "OPRYXX Team", email = "team@opryxx.ai"},
]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.8.0",
    "torch>=1.10.0",
    "transformers>=4.15.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "pytest-xdist>=2.4.0",
    "black>=21.12b0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.931",
    "bandit>=1.7.0",
    "safety>=1.10.3",
    "pre-commit>=2.16.0",
    "bump2version>=1.0.1",
    "ipython>=8.0.0",
]
docs = [
    "sphinx>=4.3.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.15.0",
    "myst-parser>=0.16.1",
]

[project.urls]
Homepage = "https://github.com/your-org/opryxx"
Documentation = "https://opryxx.readthedocs.io/"
Source = "https://github.com/your-org/opryxx"
Tracker = "https://github.com/your-org/opryxx/issues"

[tool.setuptools]
package-dir = { "" = "src" }
packages = find:

[tool.setuptools.packages.find]
where = ["src"]
include = ["opryxx*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=opryxx --cov-report=term-missing"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["opryxx"]
omit = [
    "**/tests/**",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.bandit]
targets = ["opryxx"]
skips = ["B101"]

[build_meta]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
